churn column dfusers

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -418,48 +418,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    0.999462\n",
-       "1    0.000538\n",
-       "Name: churn, dtype: float64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#creating churn feature in the dataset\n",
-    "cutOffDate = 55\n",
-    "df['churn'] = [1 if x > cutOffDate else 0 for x in df.interval]\n",
-    "df.churn.value_counts(normalize=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Percentage of Customers that Churn:  5.42 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Percentage of Customers that Churn: \", round((len(df[df.churn == 1])/df.uuid.nunique())*100,2), \"%\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -468,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +438,7 @@
        "Name: event, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +491,6 @@
        "      <th>event</th>\n",
        "      <th>monthYear</th>\n",
        "      <th>interval</th>\n",
-       "      <th>churn</th>\n",
        "      <th>contact</th>\n",
        "      <th>small_purchase</th>\n",
        "      <th>big_purchase</th>\n",
@@ -548,7 +505,6 @@
        "      <td>2019-02</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -560,7 +516,6 @@
        "      <td>2019-02</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -571,7 +526,6 @@
        "      <td>contact</td>\n",
        "      <td>2019-04</td>\n",
        "      <td>51</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -583,7 +537,6 @@
        "      <td>contact</td>\n",
        "      <td>2019-04</td>\n",
        "      <td>7</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -595,7 +548,6 @@
        "      <td>contact</td>\n",
        "      <td>2019-04</td>\n",
        "      <td>11</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -612,15 +564,15 @@
        "3  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-19         contact   2019-04   \n",
        "4  00038504-c286-4c49-a6ed-d7853f65f7d6 2019-04-30         contact   2019-04   \n",
        "\n",
-       "   interval  churn  contact  small_purchase  big_purchase  \n",
-       "0         0      0        0               1             0  \n",
-       "1        13      0        0               1             0  \n",
-       "2        51      0        1               0             0  \n",
-       "3         7      0        1               0             0  \n",
-       "4        11      0        1               0             0  "
+       "   interval  contact  small_purchase  big_purchase  \n",
+       "0         0        0               1             0  \n",
+       "1        13        0               1             0  \n",
+       "2        51        1               0             0  \n",
+       "3         7        1               0             0  \n",
+       "4        11        1               0             0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +695,7 @@
        "4             3   6.653846 2020-12-31  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +828,7 @@
        "4             3   6.653846 2020-12-31                1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,22 +839,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3239845261121857"
+       "0    0.676015\n",
+       "1    0.323985\n",
+       "Name: churn, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(dfUsers[dfUsers.days_last_event > cutOffDate])/len(dfUsers)"
+    "#creating churn feature in the dataset\n",
+    "cutOffDate = 55\n",
+    "dfUsers['churn'] = [1 if x > cutOffDate else 0 for x in dfUsers.days_last_event]\n",
+    "dfUsers.churn.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>small_purchase</th>\n",
+       "      <th>big_purchase</th>\n",
+       "      <th>interval</th>\n",
+       "      <th>date</th>\n",
+       "      <th>days_last_event</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00038504-c286-4c49-a6ed-d7853f65f7d6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.090909</td>\n",
+       "      <td>2019-07-12</td>\n",
+       "      <td>539</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0076823a-041d-4fa0-a19c-0e6e63bcef76</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.333333</td>\n",
+       "      <td>2019-12-16</td>\n",
+       "      <td>382</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>01b82507-ec72-4826-b825-64c7f20e4088</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.250000</td>\n",
+       "      <td>2019-05-12</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>01d22216-c360-4587-b0eb-e5c1c520e281</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2020-02-23</td>\n",
+       "      <td>313</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>03897694-4a38-47c6-820e-118d0c055cf4</td>\n",
+       "      <td>27</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.214286</td>\n",
+       "      <td>2020-01-28</td>\n",
+       "      <td>339</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024</th>\n",
+       "      <td>fc9975ab-5ff9-49ba-b318-b358cf4dc61a</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.375000</td>\n",
+       "      <td>2020-05-22</td>\n",
+       "      <td>224</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1025</th>\n",
+       "      <td>fd1ddefe-599d-4963-85cb-04f86d97cba2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.333333</td>\n",
+       "      <td>2019-06-09</td>\n",
+       "      <td>572</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1026</th>\n",
+       "      <td>fd3269e7-4407-48da-9f3f-461c1685df98</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8.857143</td>\n",
+       "      <td>2020-04-07</td>\n",
+       "      <td>269</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027</th>\n",
+       "      <td>fd5f00c6-8939-476c-800f-886bf56d232d</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2019-08-11</td>\n",
+       "      <td>509</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030</th>\n",
+       "      <td>fdca8f30-d8c8-4bf7-98eb-5e778ed3f0a2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>2020-08-29</td>\n",
+       "      <td>125</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>335 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      uuid  contact  small_purchase  \\\n",
+       "0     00038504-c286-4c49-a6ed-d7853f65f7d6        7               3   \n",
+       "2     0076823a-041d-4fa0-a19c-0e6e63bcef76        3               2   \n",
+       "6     01b82507-ec72-4826-b825-64c7f20e4088        4               0   \n",
+       "7     01d22216-c360-4587-b0eb-e5c1c520e281        1               1   \n",
+       "12    03897694-4a38-47c6-820e-118d0c055cf4       27              13   \n",
+       "...                                    ...      ...             ...   \n",
+       "1024  fc9975ab-5ff9-49ba-b318-b358cf4dc61a        8               6   \n",
+       "1025  fd1ddefe-599d-4963-85cb-04f86d97cba2       10               2   \n",
+       "1026  fd3269e7-4407-48da-9f3f-461c1685df98       11               5   \n",
+       "1027  fd5f00c6-8939-476c-800f-886bf56d232d        1               0   \n",
+       "1030  fdca8f30-d8c8-4bf7-98eb-5e778ed3f0a2        3               1   \n",
+       "\n",
+       "      big_purchase   interval       date  days_last_event  churn  \n",
+       "0                1  14.090909 2019-07-12              539      1  \n",
+       "2                1   7.333333 2019-12-16              382      1  \n",
+       "6                0   5.250000 2019-05-12              600      1  \n",
+       "7                0   4.000000 2020-02-23              313      1  \n",
+       "12               2   8.214286 2020-01-28              339      1  \n",
+       "...            ...        ...        ...              ...    ...  \n",
+       "1024             2   7.375000 2020-05-22              224      1  \n",
+       "1025             0  10.333333 2019-06-09              572      1  \n",
+       "1026             5   8.857143 2020-04-07              269      1  \n",
+       "1027             0   0.000000 2019-08-11              509      1  \n",
+       "1030             0   4.500000 2020-08-29              125      1  \n",
+       "\n",
+       "[335 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfUsers[dfUsers.churn == 1]"
    ]
   }
  ],
