--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -647,6 +647,89 @@
     "plt.title('Days Since Last Event')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't use starred expression here (<ipython-input-40-f1433a39cfb5>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-f1433a39cfb5>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't use starred expression here\n"
+     ]
+    }
+   ],
+   "source": [
+    "*features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103384, 3)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train = df.loc[df.churn != 'last']\n",
+    "train = train[['interval','events','churn']]\n",
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Train Dataset:  (72368, 2)\n",
+      "Shape of Test Dataset:  (31016, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(train.drop(columns=['churn']),train['churn'], test_size=0.3,random_state=42)\n",
+    "print(\"Shape of Train Dataset: \",X_train.shape)\n",
+    "print(\"Shape of Test Dataset: \",X_valid.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(719, 2)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = df.loc[df.churn == 'last']\n",
+    "X_test = test[['interval','events']]\n",
+    "X_test.shape"
+   ]
   }
  ],
  "metadata": {
