--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -676,23 +676,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of Train dataset:  (72368, 2)\n",
-      "Shape of Valid dataset:  (31016, 2)\n"
+      "Shape of X Train dataset:  (72368, 2)\n",
+      "Shape of y Train dataset:  (72368,)\n",
+      "Shape of X Valid dataset:  (31016, 2)\n",
+      "Shape of y Valid dataset:  (31016,)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(trainValid.drop(columns=['churn']),trainValid['churn'], test_size=0.3,random_state=42)\n",
-    "print(\"Shape of Train dataset: \",X_train.shape)\n",
-    "print(\"Shape of Valid dataset: \",X_valid.shape)"
+    "print(\"Shape of X Train dataset: \",X_train.shape)\n",
+    "print(\"Shape of y Train dataset: \",y_train.shape)\n",
+    "print(\"Shape of X Valid dataset: \",X_valid.shape)\n",
+    "print(\"Shape of y Valid dataset: \",y_valid.shape)"
    ]
   },
   {
@@ -712,6 +716,121 @@
     "test = df.loc[df.churn == 'last']\n",
     "X_test = test[['interval','events']]\n",
     "print(\"Shape of Test dataset:\",X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"Nearest_Neighbors\",\"Decision_Tree\", \"Random_Forest\",\"AdaBoost\",\"Naive_Bayes\"]\n",
+    "\n",
+    "classifiers = [\n",
+    "    KNeighborsClassifier(3),\n",
+    "    DecisionTreeClassifier(max_depth=5),\n",
+    "    RandomForestClassifier(max_depth=5, n_estimators=100),\n",
+    "    AdaBoostClassifier(n_estimators=100),\n",
+    "    GaussianNB()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision_Tree</td>\n",
+       "      <td>0.997131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>0.997131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nearest_Neighbors</td>\n",
+       "      <td>0.997098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Random_Forest</td>\n",
+       "      <td>0.997098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Naive_Bayes</td>\n",
+       "      <td>0.983073</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                name     score\n",
+       "1      Decision_Tree  0.997131\n",
+       "3           AdaBoost  0.997131\n",
+       "0  Nearest_Neighbors  0.997098\n",
+       "2      Random_Forest  0.997098\n",
+       "4        Naive_Bayes  0.983073"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "for name, clf in zip(names, classifiers):\n",
+    "    clf.fit(X_train, y_train.astype('int'))\n",
+    "    score = clf.score(X_valid, y_valid.astype('int'))\n",
+    "    scores.append(score)\n",
+    "\n",
+    "models = pd.DataFrame()\n",
+    "models['name'] = names\n",
+    "models['score'] = scores\n",
+    "models.sort_values(by='score',ascending=False)"
    ]
   }
  ],
