smote resample train and valid dataset

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1461,7 +1461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Churn Prediction"
+    "## Oversampling minority class"
    ]
   },
   {
@@ -1511,8 +1511,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying SMOTE to implement oversampling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "sm = SMOTE(random_state=42,sampling_strategy=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X Train dataset:  (144286, 6)\n",
+      "Shape of y Train dataset:  (144286,)\n",
+      "Shape of X Valid dataset:  (61852, 6)\n",
+      "Shape of y Valid dataset:  (61852,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_res, y_train_res = sm.fit_resample(X_train, y_train.astype('int'))\n",
+    "X_valid_res, y_valid_res = sm.fit_resample(X_valid, y_valid.astype('int'))\n",
+    "print(\"Shape of X Train dataset: \",X_train_res.shape)\n",
+    "print(\"Shape of y Train dataset: \",y_train_res.shape)\n",
+    "print(\"Shape of X Valid dataset: \",X_valid_res.shape)\n",
+    "print(\"Shape of y Valid dataset: \",y_valid_res.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1590,29 +1632,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Random_Forest</td>\n",
-       "      <td>0.997098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Nearest_Neighbors</td>\n",
-       "      <td>0.996905</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Decision_Tree</td>\n",
-       "      <td>0.996744</td>\n",
+       "      <td>0.981526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AdaBoost</td>\n",
-       "      <td>0.996486</td>\n",
+       "      <td>0.969661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Random_Forest</td>\n",
+       "      <td>0.957860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision_Tree</td>\n",
+       "      <td>0.943094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Naive_Bayes</td>\n",
-       "      <td>0.940805</td>\n",
+       "      <td>0.928714</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1620,14 +1662,14 @@
       ],
       "text/plain": [
        "                name     score\n",
-       "2      Random_Forest  0.997098\n",
-       "0  Nearest_Neighbors  0.996905\n",
-       "1      Decision_Tree  0.996744\n",
-       "3           AdaBoost  0.996486\n",
-       "4        Naive_Bayes  0.940805"
+       "0  Nearest_Neighbors  0.981526\n",
+       "3           AdaBoost  0.969661\n",
+       "2      Random_Forest  0.957860\n",
+       "1      Decision_Tree  0.943094\n",
+       "4        Naive_Bayes  0.928714"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,7 +1677,7 @@
    "source": [
     "scores = []\n",
     "for name, clf in zip(names, classifiers):\n",
-    "    clf.fit(X_train, y_train.astype('int'))\n",
+    "    clf.fit(X_train_res, y_train_res.astype('int'))\n",
     "    score = clf.score(X_valid, y_valid.astype('int'))\n",
     "    scores.append(score)\n",
     "\n",
@@ -1647,41 +1689,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model = RandomForestClassifier(max_depth=5,n_estimators=200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model.fit(X_train,y_train.astype('int'))\n",
-    "churnPredict = best_model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "719"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(churnPredict)"
+    "best_model = KNeighborsClassifier(3)"
    ]
   },
   {
@@ -1690,8 +1702,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#substituting for the values predicted by the model in the dataframe\n",
-    "df.loc[df.churn == 'last','churn'] = churnPredict"
+    "best_model.fit(X_train_res,y_train_res.astype('int'))\n",
+    "churnPredict = best_model.predict(X_test)"
    ]
   },
   {
@@ -1702,12 +1714,42 @@
     {
      "data": {
       "text/plain": [
-       "0    103788\n",
-       "1       315\n",
-       "Name: churn, dtype: int64"
+       "719"
       ]
      },
      "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(churnPredict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#substituting for the values predicted by the model in the dataframe\n",
+    "df.loc[df.churn == 'last','churn'] = churnPredict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    103751\n",
+       "1       352\n",
+       "Name: churn, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
