random under sampling

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1514,7 +1514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Applying SMOTE to implement oversampling"
+    "### Applying RandomUnderSampling in majority class"
    ]
   },
   {
@@ -1523,8 +1523,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from imblearn.over_sampling import SMOTE\n",
-    "sm = SMOTE(random_state=42,sampling_strategy=1.0)"
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "rus = RandomUnderSampler(random_state=42,sampling_strategy=0.5)"
    ]
   },
   {
@@ -1536,16 +1536,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of X Train dataset:  (144286, 6)\n",
-      "Shape of y Train dataset:  (144286,)\n",
-      "Shape of X Valid dataset:  (61852, 6)\n",
-      "Shape of y Valid dataset:  (61852,)\n"
+      "Shape of X Train dataset:  (675, 6)\n",
+      "Shape of y Train dataset:  (675,)\n",
+      "Shape of X Valid dataset:  (270, 6)\n",
+      "Shape of y Valid dataset:  (270,)\n"
      ]
     }
    ],
    "source": [
-    "X_train_res, y_train_res = sm.fit_resample(X_train, y_train.astype('int'))\n",
-    "X_valid_res, y_valid_res = sm.fit_resample(X_valid, y_valid.astype('int'))\n",
+    "X_train_res, y_train_res = rus.fit_resample(X_train, y_train.astype('int'))\n",
+    "X_valid_res, y_valid_res = rus.fit_resample(X_valid, y_valid.astype('int'))\n",
+    "print(\"Shape of X Train dataset: \",X_train_res.shape)\n",
+    "print(\"Shape of y Train dataset: \",y_train_res.shape)\n",
+    "print(\"Shape of X Valid dataset: \",X_valid_res.shape)\n",
+    "print(\"Shape of y Valid dataset: \",y_valid_res.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying SMOTE to implement oversampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "sm = SMOTE(random_state=42,sampling_strategy=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X Train dataset:  (900, 6)\n",
+      "Shape of y Train dataset:  (900,)\n",
+      "Shape of X Valid dataset:  (360, 6)\n",
+      "Shape of y Valid dataset:  (360,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_res, y_train_res = sm.fit_resample(X_train_res, y_train_res.astype('int'))\n",
+    "X_valid_res, y_valid_res = sm.fit_resample(X_valid_res, y_valid_res.astype('int'))\n",
     "print(\"Shape of X Train dataset: \",X_train_res.shape)\n",
     "print(\"Shape of y Train dataset: \",y_train_res.shape)\n",
     "print(\"Shape of X Valid dataset: \",X_valid_res.shape)\n",
@@ -1554,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1586,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1632,29 +1674,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Nearest_Neighbors</td>\n",
-       "      <td>0.981526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AdaBoost</td>\n",
-       "      <td>0.969661</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Random_Forest</td>\n",
-       "      <td>0.957860</td>\n",
+       "      <td>0.939676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision_Tree</td>\n",
-       "      <td>0.943094</td>\n",
+       "      <td>0.935969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Random_Forest</td>\n",
+       "      <td>0.930068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Naive_Bayes</td>\n",
-       "      <td>0.928714</td>\n",
+       "      <td>0.914141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nearest_Neighbors</td>\n",
+       "      <td>0.905081</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1662,14 +1704,14 @@
       ],
       "text/plain": [
        "                name     score\n",
-       "0  Nearest_Neighbors  0.981526\n",
-       "3           AdaBoost  0.969661\n",
-       "2      Random_Forest  0.957860\n",
-       "1      Decision_Tree  0.943094\n",
-       "4        Naive_Bayes  0.928714"
+       "3           AdaBoost  0.939676\n",
+       "1      Decision_Tree  0.935969\n",
+       "2      Random_Forest  0.930068\n",
+       "4        Naive_Bayes  0.914141\n",
+       "0  Nearest_Neighbors  0.905081"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1689,41 +1731,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model = KNeighborsClassifier(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model.fit(X_train_res,y_train_res.astype('int'))\n",
-    "churnPredict = best_model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "719"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(churnPredict)"
+    "best_model = AdaBoostClassifier(n_estimators=100)"
    ]
   },
   {
@@ -1732,8 +1744,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#substituting for the values predicted by the model in the dataframe\n",
-    "df.loc[df.churn == 'last','churn'] = churnPredict"
+    "best_model.fit(X_train_res,y_train_res.astype('int'))\n",
+    "churnPredict = best_model.predict(X_test)"
    ]
   },
   {
@@ -1744,12 +1756,42 @@
     {
      "data": {
       "text/plain": [
-       "0    103751\n",
-       "1       352\n",
-       "Name: churn, dtype: int64"
+       "719"
       ]
      },
      "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(churnPredict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#substituting for the values predicted by the model in the dataframe\n",
+    "df.loc[df.churn == 'last','churn'] = churnPredict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    103647\n",
+       "1       456\n",
+       "Name: churn, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
